@@ -3,6 +3,8 @@ Added: Tray icon for Touhou 17.
 Changed: The backwards compatibility code has been rewritten. Unfortunately this breaks compatibility with older versions. An intermediary version called pre3.5 is provided for conversion of settings.json to the new format.
 Changed: The browser will no longer start on a webpage.
 Changed: replays.gensokyo.org was changed to maribelhearn.com/gensokyo as the former is no longer accessible.
+Changed: Updated thcrap interaction to be compatible with the 2019-10-05 update. You may need to set your thcrap_loader path again.
+Changed: You can now set arbitrary names for game profile IDs as long as they don't start with "th".
 
 1.0-pre3 (13/08/2019)
 Added: Selected patches list to show the order of installed patches.
